# mnemonic-to-seed

./: Cargo.toml
src/: main.rs
