[package]
name = "mnemonic2key"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bip39 = "1.0.1"
stellar-base = "0.5.0"
libsodium-sys = "=0.2.6"
slip10_ed25519 = "0.1.3"
rand = "0.7.3"
rand_core = "0.5.1"
ed25519-dalek = "1.0.0-pre.1"
base32 = "0.4.0"
crc16 = "0.4.0"
bytes = "0.5.4"
byteorder = "1.2.1"
clap = "2.26.0"
regex = "1"
fstrings = "0.2.3"
sodiumoxide = "=0.2.6"


[dev-dependencies]
criterion = "0.3"
num_cpus = "1.0"
